add jobs APIs in api-docs
